# apriltags

./: CMakeLists.txt  apriltags.pc.in
example/: CMakeLists.txt  apriltag_demo.c  opencv_demo.cc
example/utils/: getopt.c
include/apriltags/: apriltag_pose.h
src/common/: homography.c  image_u8.c  matd.c
